changes in training

--- a/notebook/curation.ipynb
+++ b/notebook/curation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,18 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jeetkanjani7/tensorflow/local/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from utils.misc_utils import mkdir_p\n",
     "from utils.infer_utils import convert_bbox_format, get_crops, Rectangle"
@@ -44,12 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_dir  = ''\n",
-    "save_dir = '../../data/Imagenet/ILSVRC/Curated'"
+    "save_dir = '../../data/Imagenet/ILSVRC/Curated'\n",
+    "annotation_dir = ''"
    ]
   },
   {
@@ -58,14 +50,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "OSError",
-     "evalue": "[Errno 2] No such file or directory: '../../data/Imagenet/ILSVRC/Annotations/VID/train/ILSVRC2017_VID_train_0000/'",
+     "ename": "NameError",
+     "evalue": "name 'annotation_dir' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
       "\u001b[0;32m<ipython-input-5-8b8abe65e63e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvideo_names\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mannotation_dir\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtotal_videos\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvideo_names\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOSError\u001b[0m: [Errno 2] No such file or directory: '../../data/Imagenet/ILSVRC/Annotations/VID/train/ILSVRC2017_VID_train_0000/'"
+      "\u001b[0;31mNameError\u001b[0m: name 'annotation_dir' is not defined"
      ]
     }
    ],
